tests/errors/item-macro-unsupported-item.ari
meta fn make_item(input: token_stream) -> token_stream {
}

make_item!(trait Generated {
});

fn main() -> i64 {
  return 0;
}
